--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@types/react": "^18.3.3",
     "axios": "^1.7.2",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.2",
@@ -26,7 +27,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
