--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.7.2",
     "expo": "^51.0.0",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
