--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "^17.1.7",
     "expo-router": "~3.5.18",
+    "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
