--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@types/react": "^18.3.3",
     "axios": "^1.7.2",
     "expo": "^51.0.0",
